manifest/app/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    service: backend
  name: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      service: backend
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app-network: "true"
        service: backend
    spec:
      containers:
        - image: tagal.jfrog.io/tagal/backend:50
          name: backend
          ports:
            - containerPort: 8080
          resources: {}
      restartPolicy: Always
status: {}
