manifest/app/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    service: frontend
  name: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      service: frontend
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app-network: "true"
        service: frontend
    spec:
      containers:
        - image: tagal.jfrog.io/tagal/frontend:57
          name: frontend
          ports:
            - containerPort: 3000
          resources: {}
      restartPolicy: Always
status: {}
