manifest/app/app-network-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: app-network
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              pp-network: "true"
  podSelector:
    matchLabels:
      app-network: "true"
